# vc_brain

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.railway  Makefile  PLAN.md  PROGRESS.md  README.md  SUBMISSION_COPY.md  SUBMISSION_PLAN.md  inspect.mjs  pyproject.toml  railway.json
.claude/: launch.json
.github/workflows/: ci.yml
docs/: integration_deep_slice.md  research_program.md  rubric.md  submission_deck.html
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  shot.mjs  tsconfig.json
scripts/: check_deploy_artifacts.sh  frozen_clock.py  smoke_railway_image.sh  spotcheck_labels.py
service/: README.md  pyproject.toml
service/scripts/: export_openapi.py
service/src/vcb_service/: __init__.py  app.py  claim_schema.py  cli.py  export_openapi.py  indexer.py  integrate_cli.py  integrator.py  models.py  snapshot.py  store.py
service/src/vcb_service/agent/: __init__.py  demo.py  manager.py  middleware.py  models.py  providers.py  runner.py  runtime.py  settings.py
service/src/vcb_service/agent/fixtures/: ada-lovelace-fixture.json
service/tests/: conftest.py  test_agent.py  test_api.py  test_claim_schema_contract.py  test_deploy_snapshot.py  test_fixtures.py  test_indexer.py  test_integrator.py
site/: backtest.html  index.html
specs/: a_exploitation.md  p2_labels.md  p3_events.md  p4_model.md  p8_slice.md
tests/: test_build_labels.py  test_dashboard_build.py  test_events_clickhouse.py  test_events_leakage.py  test_events_pipeline.py  test_events_sql.py  test_frozen_clock.py  test_gh_resolve.py  test_gnn_rerank.py  test_identity.py  test_identity_domains.py  test_memo_generate.py  test_memo_intake.py  test_memo_schema.py  test_memo_screen.py  test_p4_features.py  test_p4_model_eval.py  test_railway_config.py  test_secondhop_graph.py  test_semantics.py  test_semantics_person.py  test_semantics_pilot.py  test_smoke.py  test_yc_companies.py  test_yc_founders.py
(+367 files in other folders)
