[project]
name = "vc-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Misha Aghamalyan", email = "misha.aghamalyan@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
vc-brain = "vc_brain:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
