[project]
name = "vc-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Misha Aghamalyan", email = "misha.aghamalyan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "kaleido>=1.3.0",
    "lightgbm>=4.7.0",
    "pdfplumber>=0.11.10",
    "plotly>=6.9.0",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "tenacity>=9.1.4",
]

[project.scripts]
vc-brain = "vc_brain:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
